Se termina la funcionalidad de proyecto dejando pendiente los eestilos

--- a/01.EstudioPersonal/05.Angular/1erAplicacion/ListaCompras/src/app/component/items/items.component.html
+++ b/01.EstudioPersonal/05.Angular/1erAplicacion/ListaCompras/src/app/component/items/items.component.html
@@ -1,5 +1,9 @@
 <div>
+    <app-total mensaje = "El total es: " [totales]="total"></app-total>
     <app-item 
-        *ngFor="let item of items" [item] = "item" (borrarItem)="borrarItem($event)">
+        *ngFor="let item of items" 
+        [item] = "item" 
+        (borrarItem)="borrarItem($event)"
+        (toggleItem)="onCheck($event)">
     </app-item>
 </div>
